[package]
name = "scancode"
version = "0.1.0"
authors = ["Risto Saarelma <risto.saarelma@iki.fi>"]
description = "Keyboard hardware scancode converter"
keywords = ["keyboard", "input"]
repository = "https://github.com/rsaarelm/scancode-rs"
license = "MIT OR Apache-2.0"

[dependencies]
enum_primitive = "0.1"

[dev-dependencies]
glutin = "0.6"
num = "0.1"
